# state-search

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
api/: Cargo.toml  README.md
api/src/: error.rs  main.rs  state.rs
api/src/routes/: health.rs  locations.rs  mod.rs  observations.rs  sources.rs
config/: default.toml  dims.yml  sources.example.toml  sources.toml  sources.yml
core/: Cargo.toml  README.md
core/src/: config.rs  db.rs  error.rs  lib.rs
core/src/models/: dim_file_log.rs  import.rs  import_schema_field.rs  location.rs  mod.rs  normalized_import.rs  observation.rs  row_context.rs  time.rs
core/src/repositories/: dim_file_log.rs  import.rs  import_schema.rs  location.rs  mod.rs  normalized_import.rs  observation.rs  row_context.rs  time.rs
docs/: adding-sources.md  getting-started.md  migrations.md
docs/decisions/: 001-star-schema.md  002-ingest-run-id.md  003-no-compiletime-sqlx.md
docs/superpowers/plans/: 2026-03-14-ingest-transforms.md  2026-03-14-observation-ingest-run.md  2026-03-15-dim-loading.md  2026-03-15-normalized-imports.md  2026-03-16-dim-ingestion-decoupling.md
docs/superpowers/specs/: 2026-03-14-config-driven-ingest-design.md  2026-03-14-ingest-transforms-design.md  2026-03-14-observation-ingest-run-design.md  2026-03-15-dim-loading-design.md  2026-03-15-normalized-imports-design.md  2026-03-15-observation-context-design.md  2026-03-16-dim-ingestion-decoupling-design.md
ingest/: CLAUDE.md  Cargo.toml  README.md  rules.md
ingest/src/: main.rs  pipeline.rs  stream.rs
ingest/src/pipeline/: context.rs  derived.rs  dim.rs  dimensions.rs  export.rs  mod.rs  observations.rs  record.rs  row.rs  schema.rs  uuid.rs
ingest/src/transforms/: chain.rs  coerce.rs  mod.rs  resolve.rs
ingest/src/transforms/rules/: mod.rs  state_name_to_code.rs  str_to_bool.rs
migrations/: 001_initial.sql  002_location_county.sql  003_observation_ingest_run.sql  004_row_context.sql  005_normalized_imports.sql  006_uuid_pks.sql  007_location_expand.sql
web/: CLAUDE.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: api.ts
web/src/lib/components/: MetricChart.svelte  ObservationsTable.svelte  StateMap.svelte
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/observations/: +page.svelte
web/src/routes/sources/: +page.svelte
