[package]
name    = "state-search-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
state-search-core = { path = "../core" }

tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx       = { workspace = true }
uuid       = { workspace = true }

axum       = { version = "0.7", features = ["json", "multipart"] }
tower      = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs"] }
