[package]
name    = "state-search-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio      = { workspace = true }
sqlx       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
config     = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
