[package]
name    = "state-search-ingest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ingest"
path = "src/main.rs"

[dependencies]
state-search-core = { path = "../core" }

tokio      = { workspace = true }
sqlx       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }

csv     = "1"
clap    = { version = "4", features = ["derive"] }
phf       = { version = "0.11", features = ["macros"] }
chrono    = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
toml = "0.8"
